2007-11-12  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_ruler_button_press): don't let
	GimpImageMapTools move sample points. They fail badly and leave
	the display in a paused state.

2007-11-12  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/tiff-load.c (run): properly handle a failure of
	TIFFFdOpen() instead of crashing on TIFF files we can't handle.

2007-11-12  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): don't
	crash if gimp_display_shell_filter_new() returns NULL.
	Fixes bug #495863.

2007-11-11  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/script-fu-compat.init: Return a list
	from cons-array when type is 'string.

2007-11-10  Sven Neumann  <sven@gimp.org>

	* app/actions/view-actions.c (view_zoom_explicit_actions): fixed
	incorrect tooltip (bug #495564).

2007-11-10  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/helpbrowser/dialog.c (browser_dialog_make_index_foreach):
	deal gracefully with NULL titles.

2007-11-08  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpstatusbar.c (gimp_statusbar_vprintf): also cut
	the message at a '\r' character. Fixes the remaining aspect of
	bug #492718.

2007-11-08  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell.c (gimp_display_shell_show_tooltip):
	don't directly pass a message to gimp_statusbar_push(), it expects
	a format string and printf-like varargs. Fixes the crash reported
	in bug #492718.

2007-11-06  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* tools/pdbgen/pdb/plug_in.pdb: improved documentation for
	gimp-plugin-menu-register.

	* app/pdb/plug_in_cmds.c
	* libgimp/gimpplugin_pdb.c: regenerated.

2007-11-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpimagemap.c (gimp_image_map_clear): update the